--- a/_includes/default.liquid
+++ b/_includes/default.liquid
@@ -27,11 +27,11 @@
         padding: 4em 1em;
         color: #1d2429;
         display: flex;
-        min-height: 100vh;
+        min-height: 85vh;
       flex-direction: column;
       }
       main{
-      flex: 2;
+      flex: 1 0 auto;
         height: 100%;
       }
       footer {
